2004-04-29  Not Zed  <NotZed@Ximian.com>

	* gui/e-itip-control.c (e_itip_control_set_data): check we find
	any usable components of the icalendar entry before dereferncing
	it.  Fixes crash in #57264.

2004-04-28  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model.c (e_cal_view_objects_removed_cb): make sure we
	remove all objects with the UIDs being removed (recurrences).

2004-04-28  Not Zed  <NotZed@Ximian.com>

	* gui/e-itip-control.c (object_requested_cb): dont shadow source
	with another source in the fallback case.  Related to #54094.

2004-04-27  JP Rosevear  <jpr@ximian.com>

	* gui/cal-search-bar.c: disable comment searching which is
	currently useless

2004-04-27  JP Rosevear  <jpr@ximian.com>

	Fixes #52270 and #57593

	* gui/e-cal-model-tasks.c (ecmt_set_value_at): remove checks for
	start after due
	(ecmt_duplicate_value): copy the completed and due dates properly
	(ecmt_fill_component_from_model): only set the percent and status
	if the completion isn't set
	(ensure_task_partially_complete): ensure the task is not complete,
	in progress and make the percentage sensible if its 0 or 100
	(set_status): make sure the status and related vars are set
	properly
	(ecmt_set_value_at): handle status
	(ecmt_fill_component_from_model): make sure the click to add
	fields don't clobber each other
	(ecmt_is_cell_editable): status is editable

	* gui/e-cal-model-calendar.c (ecmc_duplicate_value): copy the
	dtend correctly

2004-04-27  Larry Ewing  <lewing@ximian.com>

	* gui/dialogs/calendar-setup.c: hook up the color picker and test
	buttons in the new task dialog.

	* gui/dialogs/calendar-setup.glade: fix visibility and color
	picker names.

2004-04-27  Larry Ewing  <lewing@ximian.com>

	* gui/dialogs/calendar-setup.c (new_calendar_test_uri): add
	handler for test button.
	(calendar_setup_new_calendar): connect test button, fill in color
	picker member.
	(source_to_dialog): set the color picker color if the source has
	one.